@@ -1,3 +1,8 @@
+2011-12-20  Dodji Seketeli  <dodji@redhat.com>
+
+	PR debug/49951
+	* g++.dg/gcov/gcov-2.C: Adjust.
+
 2011-12-20  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/51612
